--- a/app/_components/menu/style.module.scss
+++ b/app/_components/menu/style.module.scss
@@ -1,8 +1,10 @@
 .screenContainer {
   height: 100%;
   width: 100%;
-  margin: 20px;
-  margin-top: 10px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .heading {
